--- a/home.html
+++ b/home.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="kr">
   <head>
-    <link
-      rel="shortcut icon"
-      sizes="16x16 32x32 64x64"
-      href="https://nomadcoders.co/m.png"
-    />
     <meta charset="UTF-8" />
     <meta name="description" content="This is my website" />
     <title>Home - My first website</title>
   </head>
   <body>
-    <h1>Hello!</h1>
-    <a href="https://www.google.co.kr/" target="_blank">Go to google.com</a>
-    <img src="img/njs.jpg" alt="" />
+    <form action="">
+      <input type="file" accept="image/*" />
+      <input required placeholder="Name" type="text" />
+      <input required placeholder="Last Name" type="text" />
+      <input required placeholder="User Name" type="text" />
+      <input required placeholder="Password" minlength="10" type="password" />
+      <input type="submit" value="Create Account" />
+    </form>
   </body>
 </html>
